--- a/hackme/.project
+++ b/hackme/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>WebApplication</name>
+	<name>hackme</name>
 	<comment></comment>
 	<projects>
 	</projects>
