--- a/hackme/src/main/webapp/WEB-INF/web.xml
+++ b/hackme/src/main/webapp/WEB-INF/web.xml
@@ -3,6 +3,9 @@
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
-  <display-name>A vulnerable site</display-name>
-  
+	<display-name>A vulnerable site</display-name>
+
+	<welcome-file-list>
+		<welcome-file>SearchPage.jsp</welcome-file>
+	</welcome-file-list>
 </web-app>
